# MukyunEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Coding_style.xml  CppCheckSuppressions.txt  README.md  conanfile.txt  libs_paths.cmake
includes/Cameras/: Camera.hpp
includes/Engine/: Engine.hpp
includes/Env/: Env.hpp
includes/Exceptions/: GeneralException.hpp
includes/GameEntities/: Prop.hpp
includes/Interfaces/: ICollidable.hpp  IEntity.hpp  ITransformable.hpp
includes/Light/: ALight.hpp  PointLight.hpp
includes/OpenGL/: RessourceManager.hpp  oGL_utility.hpp
includes/RenderBin/: ARenderBin.hpp
includes/Shadow/: DirectionalShadowRender.hpp  ShadowRenderer.hpp
includes/TestDirectionalShadow/: TestDirectionalShadow.hpp
includes/TestInstancing/: TestInstancing.hpp
includes/TestLight/: TestLight.hpp
includes/WindowManager/: Glfw_manager.hpp  Input.hpp  Window.hpp
mukyunbin/: CMakeLists.txt
mukyunbin/includes/Env/Init/: EngineInit.hpp
mukyunbin/srcs/: main.cpp
mukyunbin/srcs/Env/: Env.cpp
mukyunbin/srcs/Env/Init/: EngineInit.cpp
mukyunbin/srcs/Env/Init/SceneInit/: InitTestDirectionalShadow.cpp  InitTestInstancing.cpp  InitTestMultiLight.cpp  InitTestOmniShadow.cpp  InitTestSpotShadow.cpp
mukyunbin/srcs/Env/Init/ShaderLoading/: ShaderLoading.cpp
mukyunengine/: CMakeLists.txt
mukyunengine/cmake/conan/: Findglad.cmake  Findstb.cmake
mukyunengine/cmake/libs/: Findassimp.cmake  Findfreetype.cmake  Findglfw3.cmake  Findglm.cmake
mukyunengine/includes/Cameras/: Camera.hpp
mukyunengine/includes/Engine/: Engine.hpp
mukyunengine/includes/Exceptions/: GeneralException.hpp
mukyunengine/includes/GameEntities/Prop/: AProp.hpp  Prop.hpp
mukyunengine/includes/GameEntities/Utility/: CollisionBox.hpp
mukyunengine/includes/Light/: ALight.hpp
mukyunengine/includes/Light/ALight_Based/: DirectionalLight.hpp  PointLight.hpp  SpotLight.hpp
mukyunengine/includes/OpenGL/: RessourceManager.hpp  oGL_utility.hpp
mukyunengine/includes/OpenGL/LightContainer/: LightContainer.hpp
mukyunengine/includes/OpenGL/RenderBin/: ARenderBin.hpp
mukyunengine/includes/OpenGL/RenderBin/ARenderBin_Based/: AShadowRenderBin.hpp  BasicColorRenderBin.hpp  BasicPropRenderBin.hpp  DiffuseColored.hpp  MultiPointDirSpotLightRenderBin.hpp
mukyunengine/includes/OpenGL/RenderBin/AShadowRenderBin_Based/: MultiPointDirSpotLightShadowRenderBin.hpp
mukyunengine/includes/OpenGL/Ressource/: AFramebuffer.hpp  Fontset.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Texture.hpp
mukyunengine/includes/OpenGL/Ressource/AFramebuffer_Based/: DirectionalDepthMap.hpp  ImageFramebuffer.hpp  OmnidirectionalDepthMap.hpp
mukyunengine/includes/OpenGL/Shadow/: ShadowRenderer.hpp
mukyunengine/includes/UI/ShaderSurface/: ShaderSurface.hpp  TextureShaderSurface.hpp
mukyunengine/includes/WindowManager/: Glfw_manager.hpp  Input.hpp  Window.hpp
mukyunengine/srcs/Cameras/: Camera.cpp
mukyunengine/srcs/Engine/: Engine.cpp
mukyunengine/srcs/Exceptions/: GeneralException.cpp
mukyunengine/srcs/GameEntities/Prop/: AProp.cpp  Prop.cpp
mukyunengine/srcs/GameEntities/Utility/: CollisionBox.cpp
mukyunengine/srcs/Light/: ALight.cpp
mukyunengine/srcs/Light/ALight_Based/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
mukyunengine/srcs/OpenGL/: RessourceManager.cpp  oGL_utility.cpp
mukyunengine/srcs/OpenGL/LightContainer/: LightContainer.cpp
mukyunengine/srcs/OpenGL/RenderBin/: ARenderBin.cpp
mukyunengine/srcs/OpenGL/RenderBin/ARenderBin_Based/: AShadowRenderBin.cpp  BasicColorRenderBin.cpp  BasicPropRenderBin.cpp  DiffuseColored.cpp  MultiPointDirSpotLightRenderBin.cpp
mukyunengine/srcs/OpenGL/RenderBin/AShadowRenderBin_Based/: MultiPointDirLightShadowRenderBin.cpp
mukyunengine/srcs/OpenGL/Ressource/: AFramebuffer.cpp  Fontset.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp
mukyunengine/srcs/OpenGL/Ressource/AFramebuffer_Based/: DirectionalDepthMap.cpp  ImageFramebuffer.cpp  OmnidirectionalDepthMap.cpp
mukyunengine/srcs/OpenGL/Shadow/: ShadowRenderer.cpp
mukyunengine/srcs/UI/ShaderSurface/: ShaderSurface.cpp  TextureShaderBuffer.cpp
mukyunengine/srcs/WindowManager/: Glfw_manager.cpp  Input.cpp  Window.cpp
shaders/BasicColor/: BasicColor.fs  BasicColor.vs  BasicColor_vs.glsl
shaders/BasicProp/: BasicProp.fs  BasicProp_vs.glsl
shaders/ChangeDirecionalShadowPOV/: ChangeDirectionalShadowPOV_fs.glsl
shaders/ComputeDirLightDepthMap/: ComputeDirLightDepthMap_fs.glsl  ComputeDirLightDepthMap_vs.glsl
shaders/ComputeDirShadowMaps/: ComputeDirShadowMaps_fs.glsl  ComputeDirShadowMaps_vs.glsl
shaders/ComputeOmniDepthMap/: ComputeOmniDepthMap_fs.glsl  ComputeOmniDepthMap_gs.glsl  ComputeOmniDepthMap_vs.glsl
shaders/ComputeOmniShadowMaps/: ComputeOmniShadowMaps_fs.glsl  ComputeOmniShadowMaps_vs.glsl
shaders/ComputeShadowMaps/: ComputeShadowMaps_fs.glsl  ComputeShadowMaps_vs.glsl
shaders/ComputeSpotLightDepthMap/: ComputeSpotLightDepthMap_fs.glsl  ComputeSpotLightDepthMap_vs.glsl
shaders/ComputeSpotLightShadowMaps/: ComputeSpotLightShadowMaps_fs.glsl
shaders/CulledBasicProp/: CulledBasicProp_fs.glsl  CulledBasicProp_gs.glsl  CulledBasicProp_vs.glsl
shaders/DebugShadow/: DebugShader_fs.glsl
shaders/DiffuseColored/: DiffuseColored.fs  DiffuseColored.vs  DiffuseColored_fs.glsl  DiffuseColored_vs.glsl
shaders/DisplayDepthMap/: DisplayDepthMap_fs.glsl
shaders/DisplayImage/: DisplayImage_fs.glsl  DisplayImage_vs.glsl
shaders/Fontset/: Fontset_fs.glsl  Fontset_vs.glsl
shaders/MultiDirLightShadow/: MultiDirLightShadow_fs.glsl  MultiDirLightShadow_vs.glsl
shaders/MultiPointDirSpotLight/: MultiPointDirSpotLight_fs.glsl  MultiPointDirSpotLight_vs.glsl
shaders/MultiPointDirSpotLightFusedWithShadowMap/: MultiPointDirSpotLightFusedWithShadowMap_fs.glsl  MultiPointDirSpotLightFusedWithShadowMap_vs.glsl
shaders/MultiPointDirSpotLightFusedWithShadowMapMultiPass/: MultiPointDirSpotLightFusedWithShadowMapMultiPass_fs.glsl  MultiPointDirSpotLightFusedWithShadowMapMultiPass_vs.glsl
srcs/: main.cpp
srcs/Cameras/: Camera.cpp
srcs/Engine/: Engine.cpp
srcs/Env/: Env.cpp
(+137 files in other folders)
